<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#FFE0E0E0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:background="@drawable/draw_line_left_top_bottom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_cabinet_id"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.2"/>

        <TextView
            android:background="@drawable/draw_line_left_top_bottom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_status"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.4"/>

        <TextView
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_describe"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.25"/>

        <TextView
            android:background="@drawable/draw_line_top_right_bottom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_detail"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.15"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listview_led_open"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:footerDividersEnabled="true" />

    <TextView
        android:id="@+id/listview_led_open_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="All is successful."
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="15dp" />

</LinearLayout>