<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#FFE0E0E0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:background="@drawable/draw_line_left_top_bottom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_function"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.4"/>

        <TextView
            android:background="@drawable/draw_line_left_top_bottom"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_pattern"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.4"/>

        <TextView
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_run"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.2"/>
    </LinearLayout>

    <ListView
        android:id="@+id/listview_test_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:footerDividersEnabled="true" />

</LinearLayout>