<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:background="#FFE0E0E0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_item"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.4" />

        <TextView
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_accumulation_time"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_elapsed_time"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.4" />

        <TextView
            android:id="@+id/textViewElapsedTime"
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="00 hrs 00 min"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:weightSum="1">

        <TextView
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_total_Accumulation_time"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.4" />

        <TextView
            android:id="@+id/textViewTotalTime"
            android:background="@drawable/draw_line_border"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="00 hrs 00 min"
            android:gravity="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_weight="0.6" />
    </LinearLayout>

</LinearLayout>