<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/layoutTitleBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutTitleBar"
        android:layout_above="@+id/layoutStatusBar"
        android:orientation="vertical"
        android:gravity="center"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_root_password"
                android:gravity="center"
                android:layout_weight="0.5"/>

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editPassword"
                android:gravity="center"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:weightSum="1">

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_root_password_confirm"
                android:gravity="center"
                android:layout_weight="0.5"/>

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:gravity="center"
                android:id="@+id/editConfirm"
                android:layout_weight="0.5"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_cabinet_number"
                android:gravity="center"
                android:layout_weight="0.5" />

            <EditText
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:id="@+id/editCabinet"
                android:layout_weight="0.5"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_timezone"
                android:gravity="center"
                android:layout_weight="0.5" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerTimeZone"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:weightSum="1" >

            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Screen Saving of LCD Monitor"
                android:gravity="center"
                android:layout_weight="0.5" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerScreenSaving"
                android:layout_weight="0.5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="15dp"
            android:weightSum="1"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/txt_accept"
                android:id="@+id/btnAccept"
                android:layout_weight="0.2" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="0.4" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutStatusBar"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>